force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <description>This object is being created for the warranty upsell requirement to leads marked as Sold in SF.</description>
    <label>Warranty</label>
    <nameField>
        <displayFormat>Warranty-{0000}</displayFormat>
        <label>Warranty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>