force-app/main/default/objects/Warranty__c/fields/FollowUp_Lead__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FollowUp Lead</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Warrantys</relationshipLabel>
    <relationshipName>Warrantys</relationshipName>
    <type>Lookup</type>
</CustomField>