force-app/main/default/objects/Warranty__c/fields/Generic_Booklet_URL__c.field-meta.xml
<CustomField>
    <fullName>Generic_Booklet_URL__c</fullName>
    <label>Generic Booklet URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>