force-app/main/default/objects/Warranty__c/fields/Kilometer__c.field-meta.xml
<CustomField>
    <fullName>Kilometer__c</fullName>
    <formula>Product__r.Kilometer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kilometer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>