force-app/main/default/objects/Warranty__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <formula>Product__r.Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make</label>
    <type>Text</type>
</CustomField>