force-app/main/default/objects/Warranty__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <formula>Product__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Number</label>
    <type>Text</type>
</CustomField>