force-app/main/default/objects/Warranty__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Not-Interested</fullName>
            </value>
            <value>
                <fullName>Payment pending</fullName>
            </value>
            <value>
                <fullName>Call back</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Payment successful</fullName>
            </value>
            <value>
                <fullName>Not-Interested after link sent</fullName>
            </value>
            <value>
                <fullName>No response after link sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>