force-app/main/default/objects/Warranty__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <formula>Product__r.Variant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant</label>
    <type>Text</type>
</CustomField>