force-app/main/default/objects/Warranty__c/fields/Warrant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Amount__c</fullName>
    <label>Warrant Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>