force-app/main/default/objects/Warranty__c/fields/Warranty_Number__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Number__c</fullName>
    <label>Warranty Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>