force-app/main/default/objects/Warranty__c/fields/Warranty_Punched_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Punched_Date__c</fullName>
    <label>Warranty Punched Date</label>
    <type>DateTime</type>
</CustomField>