force-app/main/default/objects/Warranty__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CertiFirst</fullName>
            </value>
            <value>
                <fullName>CertiFirst+</fullName>
            </value>
            <value>
                <fullName>AssistFirst</fullName>
            </value>
            <value>
                <fullName>WarrantyFirst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>