force-app/main/default/objects/Warranty__c/validationRules/Customer_phone_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_phone_length</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

LEN( Customer_Phone__c ) &lt;&gt; 10,
AND(
NOT(BEGINS( Customer_Phone__c , &apos;6&apos;)),
NOT(BEGINS( Customer_Phone__c , &apos;7&apos;)),
NOT(BEGINS( Customer_Phone__c , &apos;8&apos;)),
NOT(BEGINS( Customer_Phone__c , &apos;9&apos;))

)
) &amp;&amp;
OR(LEN(Customer_Phone__c ) &lt;&gt; 13,NOT(BEGINS( Customer_Phone__c , &apos;+91&apos;)))</errorConditionFormula>
    <errorMessage>Phone number can be only 10 digits and should begin with 6,7,8,9 Or the number should start with +91 and should be 13 digits only.</errorMessage>
</ValidationRule>