force-app/main/default/objects/Warranty__c/validationRules/Transaction_ID_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_ID_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Transaction_ID__c ) , 
ISPICKVAL( Status__c , &quot;Payment pending&quot;)
||ISPICKVAL( Status__c ,&quot;Payment successful&quot;)
||ISPICKVAL( Status__c ,&quot;Not-Interested after link sent&quot;)
||ISPICKVAL( Status__c ,&quot;No response after link sent&quot;) )</errorConditionFormula>
    <errorMessage>Please enter the Transaction ID</errorMessage>
</ValidationRule>